Fix maps appearance on mobile

--- a/www/html/psueoc/css/eoc.css
+++ b/www/html/psueoc/css/eoc.css
@@ -141,3 +141,25 @@ div.success {
 div.warning {
 	background: #ECEC61;
 }
+
+/* GMaps Viewport for Console */
+div.gmapsScaleConsole {
+	display: block;
+	float: right;
+	height: 350px;
+	width: 70%;
+}
+
+@media (min-width: 0px) {
+	div.gmapsScaleConsole {
+		clear: both;
+		width: 100%;
+	}
+}
+
+@media screen and (min-width: 640px) {
+	div.gmapsScaleConsole {
+		clear: none;
+		width: 60%
+	}
+}
